# goit-pythonweb-hw-12

./: .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml  test.db
docs/source/: conf.py
migrations/: env.py
migrations/versions/: 7b0d4b81a838_recreate_migrations.py  7e1816da878f_add_usedr.py
postgres-data/: postmaster.pid
postgres-data/base/13481/: pg_internal.init
postgres-data/base/16384/: pg_internal.init
postgres-data/global/: 1260  1262  2671  2672  pg_control  pg_internal.init
postgres-data/pg_stat_tmp/: db_0.stat  db_13481.stat  db_16384.stat  global.stat
src/: schemas.py
src/api/: auth.py  contacts.py  users.py  utils.py
src/conf/: config.py
src/database/: db.py  models.py
src/repository/: contacts.py  users.py
src/services/: auth.py  contacts.py  email.py  upload_file.py  users.py
src/services/templates/: reset_password.html
tests/: conftest.py  test_auth_services_unit.py  test_contact_repository_unit.py  test_contact_services_unit.py  test_integration_auth.py  test_integration_contacts.py  test_integration_users.py  test_users_repository_unit.py  test_users_services_unit.py
tests/services/: test_contacts.py  test_users.py
